feat: comment logic
