# back.api/internal/domain/user.go
@@ -5,7 +5,6 @@ type RoleType int
 const (
 	DefaultRole  RoleType = 0
 	UserRole  RoleType = 1
-	OrganizationRole RoleType = 2
 	AdminRole RoleType = 999
 )
 
@@ -14,4 +13,5 @@ type User struct {
 	Nickname string 	`json:"nickname"`
 	PasswordHash string   `json:"password" gorm:"not null"`
 	Role     RoleType `json:"role" gorm:"type:enum('user', 'admin');default:'user'"`
+	ProfileImageID int `json:"profile_image_id"`
 }
